# mixed_localization

./: .rosinstall  .rosinstall.bak  README.md
gps_to_plane/: CMakeLists.txt  CMakeLists.txt~  package.xml~
gps_to_plane/include/: gps_to_plane.h  gps_to_plane.h~  无标题文档~
gps_to_plane/src/: gps_to_plane.cpp  gps_to_plane.cpp~  pointcloud_res.cpp~
grid_localization_gl8/: CMakeLists.txt  README.md  mrpt_test.cpp  package.xml  pointcloud_receive.cpp  xyz_rpy.txt  技术文档  输出策略.txt
grid_localization_gl8/config/: config_Generate_GridMap.ini  config_Generate_GridMap.ini~  config_Localization.ini~  config_Save_Pointcloud.ini
grid_localization_gl8/include/grid_localization/: dead_reckoning.h  loam_odom_proc.h  pointToGeo.h  pointcloud_receive.h
grid_localization_gl8/launch/: gl8_localizaiton_offline.launch  gl8_odom_proc.launch
grid_localization_gl8/msg/: GPTRA_MSG.msg  VehicleIMU.msg  VehicleSpeedFeedBack.msg
grid_localization_gl8/save_log/: 2017-12-16-01-56-45.txt  2017-12-16-02-02-39.txt  2017-12-16-02-44-26.txt  2017-12-16-02-44-34.txt  2017-12-16-03-37-35.txt  2017-12-16-03-40-02.txt  2017-12-16-03-45-20.txt  2017-12-16-03-45-40.txt  2017-12-16-03-50-28.txt  2017-12-16-06-49-59.txt  2017-12-18-09-00-44.txt  2017-12-18-09-04-25.txt  2017-12-18-09-05-40.txt  2018-03-03-06-41-14.txt  2018-03-03-06-43-04.txt  2018-03-03-06-44-39.txt  2018-03-03-06-50-18.txt  2018-03-03-06-51-53.txt  2018-03-03-06-55-05.txt  2018-03-03-07-00-43.txt  2018-03-03-07-05-39.txt  2018-03-03-07-12-40.txt  2018-03-03-07-15-27.txt  2018-03-03-07-16-19.txt  2018-03-03-07-27-01.txt  2018-03-03-07-28-22.txt  2018-03-07-11-40-43.txt  2018-03-07-11-47-37.txt  2018-03-07-11-51-53.txt  2018-03-07-11-55-04.txt  2018-03-07-12-13-52.txt  2018-03-07-12-16-34.txt  2018-03-07-12-27-31.txt  2018-03-07-12-35-58.txt  2018-03-07-12-45-20.txt  2018-03-07-12-51-11.txt  2018-03-07-12-52-34.txt  2018-03-07-12-56-33.txt  2018-03-07-12-58-01.txt  2018-03-07-13-01-26.txt  (+233 more)
grid_localization_gl8/src/: dead_reckoning.cpp  dead_reckoning.cpp~  loam_odom_proc.cpp~  mrpt_test.cpp~  pointToGeo.cpp  point_cloud2.cpp~  pointcloud_receive.cpp  pointcloud_receive.cpp~
localization/fix2pose/: CMakeLists.txt  package.xml
localization/fix2pose/include/: global_parameter.h  map_frame.h
localization/fix2pose/launch/: all_gps (copy).launch  all_gps.launch  compare.launch  estimate_path.launch  estimate_pose.launch  evaluate_pf.launch  filter.launch  garmin_path.launch  garmin_pose.launch  rtk_path.launch  rtk_pose.launch  show_traffic_sign.launch  sn.launch  sn_pose.launch  strong.launch  truth_path.launch  truth_pose.launch
localization/fix2pose/src/: filter2tfpose.cpp  fix2tfpose.cpp~  global_parameter.cpp  map_frame.cpp  n280conv.cpp  point2tfpose.cpp  pose2path.cpp  pose2path2.cpp
localization/gps_localization/gps_localization_lib/: CMakeLists.txt
localization/gps_localization/gps_localization_lib/include/gps_localization_lib/: gps_localization_lib.h
localization/gps_localization/gps_localization_lib/src/: gps_localization_lib.cpp
localization/gps_localization/gps_localization_ros/: CMakeLists.txt  package.xml
localization/gps_localization/gps_localization_ros/include/gps_localization_ros/: gps_localization_ros.h
localization/gps_localization/gps_localization_ros/src/: gps_localization_ros.cpp
localization/lib/kalman_filter/: CMakeLists.txt
localization/lib/kalman_filter/include/kalman_filter/: ekf_pose2d.h  kalman_filter.h
localization/lib/kalman_filter/src/: ekf_pose2d.cpp  kalman_filter.cpp
localization/lib/particle_filter/: CMakeLists.txt  package.xml
localization/lib/particle_filter/include/particle_filter/: helper_functions.h  particle_filter.h
localization/lib/particle_filter/src/: particle_filter.cpp
localization/pole_localization/: CMakeLists.txt  package.xml
localization/pole_localization/launch/: pole_localization.launch
localization/pole_localization/src/: pf_localization.cpp  update_map.cpp
localization/pose_fusion_gl8/: CMakeLists.txt  package.xml  readme
localization/pose_fusion_gl8/bash/: debug.sh
localization/pose_fusion_gl8/include/: ekf_pose.h  global_parameter.h  map_frame.h  utils.h
localization/pose_fusion_gl8/launch/: filter_strong.launch  filter_strong.launch~
localization/pose_fusion_gl8/scripts/: error_parameter
localization/pose_fusion_gl8/src/: ekf_pose.cpp  global_parameter.cpp  main.cpp  main.cpp~  map_frame.cpp  utils.cpp
localization/stats/pose_diff_calc/: CMakeLists.txt
localization/stats/pose_diff_calc/include/: angle_diff.h  global_parameter.h  map_frame.h  position_diff.h  sensor.h
localization/stats/pose_diff_calc/launch/: angle_diff_calc.launch  position_diff_calc.launch  position_diff_calc_garmin.launch  position_diff_calc_n280.launch
localization/stats/pose_diff_calc/scripts/: heading_truth_calibration.py  imu_error.py  speed_error.py
localization/stats/pose_diff_calc/src/: angle_diff.cpp  angle_error_calc.cpp  encoder_error_calc.cpp  global_parameter.cpp  position_diff.cpp
