<?xml version="1.0"?>
<package>
  <name>fix2pose</name>
  <version>0.0.1</version>
  <description>The gps_show package</description>
  <maintainer email="lty@sjtu.org">lty</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>gl8_msgs</build_depend>
  <build_depend>gl8_utils</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gl8_msgs</run_depend>
  <run_depend>gl8_utils</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <export>
  </export>
</package>
