<package format="2">
  <name>pole_localization</name>
  <version>0.0.1</version>
  <description>
    pole_localization
  </description>
  <author>wenglihong</author>
  <maintainer email="wengge987@163.com">wenglihong</maintainer>
  <license>BSD</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>gl8_msgs</depend>
  <depend>particle_filter</depend>
  <depend>kalman_filter</depend>

</package>
